# dd-prof-php

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CppCheckSuppressions.txt  LICENSE-3rdparty.csv  README.md  datadog-profiling.c  datadog-profiling.sym
.circleci/: config.yml  nightly.sh
.github/workflows/: codeql.yml
cmake/: configurations.cmake
cmake/Modules/: CppCheck.cmake  FindPhpConfig.cmake
components/: CMakeLists.txt
components/arena/: CMakeLists.txt  arena.c  arena.h
components/arena/tests/: CMakeLists.txt  arena.cc
components/channel/: CMakeLists.txt  channel.c  channel.h
components/channel/tests/: CMakeLists.txt  channel.cc
components/clocks/: CMakeLists.txt  clocks.c  clocks.h
components/log/: CMakeLists.txt  log.c  log.h
components/log/tests/: CMakeLists.txt  log.cc
components/once/: CMakeLists.txt  once.c  once.h
components/queue/: CMakeLists.txt  queue.c  queue.h
components/queue/tests/: CMakeLists.txt  queue.cc
components/sapi/: CMakeLists.txt  sapi.c  sapi.h
components/stack-sample/: CMakeLists.txt  stack-sample.c  stack-sample.h
components/string_view/: CMakeLists.txt  string_view.c  string_view.h
components/time/: CMakeLists.txt  time.c  time.h
components/uuid/: CMakeLists.txt  uuid.h
profiling/: CMakeLists.txt  context.h  datadog-profiling.c  datadog-profiling.h  php_datadog-profiling.h
profiling/config/: CMakeLists.txt  config.c  config.h
profiling/env/: CMakeLists.txt  env.c  env.h
profiling/stack-collector/: CMakeLists.txt
tests/: CMakeLists.txt
tests/phpt/: CMakeLists.txt  phpinfo_01.phpt
(+13 files in other folders)
